# rules_python_package_fetch_repro

./: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE  demo.py  requirements_lock.txt
